--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,15 +4,21 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - uses: leafo/gh-actions-lua@v8
+        with:
+          luaVersion: "5.2.1"
+      - uses: leafo/gh-actions-luarocks@v4
+        with:
+          luarocksVersion: "3.7.0"
       - name: install candran
         run: luarocks install candran
       - name: Candran to Lua [1/2]
         run: bash ./.scripts/CandranToLua.sh
       - name: Candran to Lua [2/2]
         run: bash ./.scripts/CandranToLua.sh
-      - name: Checkout repository and submodules
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
       - name: lint
         uses: Roang-zero1/factorio-mod-luacheck@master
