Add `Luacheck` task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,14 @@
 			"command": "bash",
 			"args": [".scripts/handle_sounds.sh"],
 			"group": "build"
+		},
+		{
+			"label": "Luacheck",
+			"type": "shell",
+			"problemMatcher": [],
+			"command": "luacheck .",
+			"args": [""],
+			"group": "test"
 		}
 	]
 }
