--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "editorconfig.editorconfig",
     "lextudio.restructuredtext",
     "koihik.vscode-lua-format",
-    "mads-hartmann.bash-ide-vscode"
+    "mads-hartmann.bash-ide-vscode",
+    "ms-vscode-remote.remote-wsl"
   ]
 }
