Add luacheck task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,13 @@
 			"group": "build"
 		},
 		{
+			"label": "Luacheck",
+			"type": "shell",
+			"command": "luacheck",
+			"args": ["${file}"],
+			"group": "test"
+		},
+		{
 			"label": "Cancheck",
 			"type": "shell",
 			"command": "cancheck",
