--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,9 @@ jobs:
       with:
         luarocksVersion: "3.7.0"
     - name: install candran
-      run: luarocks install candran lpeg
+      run: luarocks install candran
+    - name: install lpeg
+      run: luarocks install lpeg
     - name: install 7z, jq
       run: sudo apt install p7zip-full jq -y
     - name: Candran to Lua
